# DestinWebcam

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  DestinWebcam  DestinWebcam.cbp  DestinWebcam.cpp  Makefile  Training.txt  TrainingOutput.txt  TrainingOutputTest.txt  Various.avi  cmake_install.cmake  testOutput.txt  trainOutput.txt
